HIVE-29077: Reduce HMS calls while adding entries into the transactionListeners while abortTxn
Details:
      * This is an addendum to HIVE-28976, while abortTxn for the list of txnIds instead of one HMS call per txnID
      * now it will call HMS only 1 time and then pass it down to listeners based on txnID